--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "engines": {
     "node": ">=22"
   },
+  "exports": {
+    ".": "./index.js",
+    "./test/memory": "./memory.js",
+    "./test/harness": "./harness.js"
+  },
   "scripts": {
     "start": "riddance-watch"
   },
